--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,4 @@
 vendor
+push-notification-test-fd696-213a9048ade6.json
+push-notification-test-fd696-514f8ec92e92.json
+push-notification-test-fd696-firebase-adminsdk-fbsvc-e750f36f2f.json
